--- a/main.html
+++ b/main.html
@@ -7,16 +7,102 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
-    <title>Hello, world!</title>
+
+    <title>Crypto Space Consultancy</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body> 
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark justify-content-between">
+      <div class="container-fluid">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">
+          <img src="assets/brand/csc.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+          Crypto Space Consultancy
+        </a>
+        <!-- Links -->
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav bd-navbar-nav flex-row">
+            <li class="nav-item">
+              <a class="nav-link" href="#about_approach">About/Aproach</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Contact Us</a>
+            </li>
+          </ul>  
+        </div>
+        
+        <!-- Search --> 
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    <!-- Landing page/image -->
+    <div class="container">
+      <ul>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+        <li>sdiofjsdfij</li>
+      </ul>  
+    </div>
+    <!-- About/Aproach -->
+    <div class="container" id="about_approach"></div>
+    <!-- Services -->
+    <div class="container" id="services"></div>
+    <!-- ?Experience? -->
+
+    <!-- ?Clients? -->
+
+    <!-- ?Testimonials? -->
+
+    <!-- Team -->
+    <div class="container" id="team"></div>
+
+    <!-- ?Social? -->
+
+    <!-- ?Blog/Crypto News? -->
+
+    <!-- Contact Us -->
+    <div class="container" id="contact_us"></div>
+
+    <!-- Footer/Legal Sh*t -->
+    
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS, then custom (js/main.js) -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
