hero image added. needs actually formating

--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto bd-navbar-nav" data-toggle="collapse" data-target="#navbarSupportedContent">
             <li class="nav-item">
-              <a class="nav-link" href="#about_approach">About/Aproach</a>
+              <a class="nav-link" href="#about-approach">About/Aproach</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
@@ -54,16 +54,18 @@
       </div>
     </nav>
     <!-- Landing page/image -->
-    <div class="container-fluid">
-      <ul>
-        <li>sdiofjsdfij</li>
-        <li>sdiofjsdfij</li>
-        <li>sdiofjsdfij</li>
-        <li>sdiofjsdfij</li>
-      </ul>  
+    <div class="container-fluid" id="hero-landing">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Crypto Space Consultancy</h1>
+          <br>
+          <br>
+          <p class="lead">This is super inspirational shit right here.</p>
+        </div>
+      </div>
     </div>
     <!-- About/Aproach -->
-    <div class="container-fluid" id="about_approach">
+    <div class="container-fluid" id="about-approach">
       
     </div>
     <!-- Services -->
