--- a/main.html
+++ b/main.html
@@ -54,6 +54,7 @@
       </div>
     </nav>
     <!-- Landing page/image -->
+
     <div class="container-fluid" id="hero-landing">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -61,6 +62,11 @@
           <br>
           <br>
           <p class="lead">This is super inspirational shit right here.</p>
+          <br>
+          <br>
+          <br>
+          <br>
+          <p class="lead">Even more inspirational shit goes here.</p>
         </div>
       </div>
     </div>
