added team cards. still need to finalise formatting

--- a/main.html
+++ b/main.html
@@ -60,19 +60,29 @@
         <div class="container">
           <h1 class="display-4">Crypto Space Consultancy</h1>
           <br>
-          <br>
-          <p class="lead">This is super inspirational shit right here.</p>
-          <br>
-          <br>
-          <br>
-          <br>
-          <p class="lead">Even more inspirational shit goes here.</p>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nisl dolor, sagittis a euismod interdum, semper in sapien. Ut egestas mi aliquet, pellentesque erat id, placerat felis. Donec aliquet velit vitae euismod congue. Mauris non lectus id neque imperdiet sagittis pharetra gravida erat. Nunc feugiat ipsum nec sem volutpat varius. Aenean gravida tempor tellus pulvinar varius. Curabitur a pulvinar dolor, et eleifend eros. Morbi tincidunt diam ligula, id pulvinar elit commodo ut. Integer posuere molestie augue, non viverra eros iaculis nec. Nullam eu lobortis elit. In iaculis lacus ac quam mattis, eget imperdiet tortor venenatis.
+            <br>
+            <br>
+            Vestibulum id congue arcu. Pellentesque eu ipsum et ante commodo scelerisque ut vitae dolor. Aenean varius arcu sit amet imperdiet fringilla. Quisque tempus metus non pretium luctus. Nullam sagittis posuere risus at placerat. Duis feugiat porta risus, eu varius magna rutrum non. Suspendisse vel justo et turpis varius porttitor sit amet id sem. Aliquam erat volutpat. Donec consequat tempus ipsum at sollicitudin. Integer in ligula vitae eros vestibulum efficitur. Sed placerat sem in quam scelerisque aliquet.
+          </p>
         </div>
       </div>
     </div>
     <!-- About/Aproach -->
-    <div class="container-fluid" id="about-approach">
-      
+    <div class="container" id="about-approach">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">About/Approach</h1>
+          <br>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nisl dolor, sagittis a euismod interdum, semper in sapien. Ut egestas mi aliquet, pellentesque erat id, placerat felis. Donec aliquet velit vitae euismod congue. Mauris non lectus id neque imperdiet sagittis pharetra gravida erat. Nunc feugiat ipsum nec sem volutpat varius. Aenean gravida tempor tellus pulvinar varius. Curabitur a pulvinar dolor, et eleifend eros. Morbi tincidunt diam ligula, id pulvinar elit commodo ut. Integer posuere molestie augue, non viverra eros iaculis nec. Nullam eu lobortis elit. In iaculis lacus ac quam mattis, eget imperdiet tortor venenatis.
+            <br>
+            <br>
+            Vestibulum id congue arcu. Pellentesque eu ipsum et ante commodo scelerisque ut vitae dolor. Aenean varius arcu sit amet imperdiet fringilla. Quisque tempus metus non pretium luctus. Nullam sagittis posuere risus at placerat. Duis feugiat porta risus, eu varius magna rutrum non. Suspendisse vel justo et turpis varius porttitor sit amet id sem. Aliquam erat volutpat. Donec consequat tempus ipsum at sollicitudin. Integer in ligula vitae eros vestibulum efficitur. Sed placerat sem in quam scelerisque aliquet.
+          </p>
+        </div>
+      </div>
     </div>
     <!-- Services -->
     <div class="container-fluid" id="services">
@@ -85,8 +95,28 @@
     <!-- ?Testimonials? -->
 
     <!-- Team -->
-    <div class="container-fluid" id="team">
-      
+    <div class="container" id="team">
+      <div class="row">
+        <h1 class="display-4">Team</h1>
+      </div>
+      <div class="row justify-content-center">
+        <div class="card-deck">
+          <div class="card mb-3" id="team-card">
+            <img class="card-img-top rounded-circle" src="assets/team/jb.svg" alt="James Bennett">
+            <div class="card-body">
+              <h5 class="card-title">James Bennett</h5>
+              <p class="card-text">With no experience in the market, James is completely winging this.</p>
+            </div>
+          </div>
+          <div class="card mb-3" id="team-card">
+            <img class="card-img-top rounded-circle" src="assets/team/butters.svg" alt="James Bennett">
+            <div class="card-body">
+              <h5 class="card-title">John Doe</h5>
+              <p class="card-text">With no experience in the market, James is completely winging this.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- ?Social? -->
