--- a/main.html
+++ b/main.html
@@ -111,8 +111,8 @@
           <div class="card mb-3" id="team-card">
             <img class="card-img-top rounded-circle" src="assets/team/butters.svg" alt="James Bennett">
             <div class="card-body">
-              <h5 class="card-title">John Doe</h5>
-              <p class="card-text">With no experience in the market, James is completely winging this.</p>
+              <h5 class="card-title">Butters Stotch</h5>
+              <p class="card-text">The voice for his generation.</p>
             </div>
           </div>
         </div>
