fixed navbar collapse issue. teams formatting tweaks

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 
     <title>Crypto Space Consultancy</title>
   </head>
-  <body> 
+  <body data-spy="scroll" data-target="#navbarSupportedContent"> 
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark justify-content-between">
       <div class="container-fluid">
@@ -28,9 +28,9 @@
         </button>
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto bd-navbar-nav" data-toggle="collapse" data-target="#navbarSupportedContent">
+          <ul class="navbar-nav mr-auto bd-navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#about-approach">About/Aproach</a>
+              <a class="nav-link" href="#about-us" >About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
@@ -43,7 +43,6 @@
             </li>
           </ul>  
         </div>
-        
         <!-- Search - Removed until functionality created --> 
         <!--
         <form class="form-inline">
@@ -54,7 +53,6 @@
       </div>
     </nav>
     <!-- Landing page/image -->
-
     <div class="container-fluid" id="hero-landing">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -70,10 +68,10 @@
       </div>
     </div>
     <!-- About/Aproach -->
-    <div class="container" id="about-approach">
+    <div class="container" id="about-us">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">About/Approach</h1>
+          <h1 class="display-4">About Us</h1>
           <br>
           <p class="lead">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nisl dolor, sagittis a euismod interdum, semper in sapien. Ut egestas mi aliquet, pellentesque erat id, placerat felis. Donec aliquet velit vitae euismod congue. Mauris non lectus id neque imperdiet sagittis pharetra gravida erat. Nunc feugiat ipsum nec sem volutpat varius. Aenean gravida tempor tellus pulvinar varius. Curabitur a pulvinar dolor, et eleifend eros. Morbi tincidunt diam ligula, id pulvinar elit commodo ut. Integer posuere molestie augue, non viverra eros iaculis nec. Nullam eu lobortis elit. In iaculis lacus ac quam mattis, eget imperdiet tortor venenatis.
@@ -85,44 +83,52 @@
       </div>
     </div>
     <!-- Services -->
-    <div class="container-fluid" id="services">
-      
+    <div class="container" id="services">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Services</h1>
+          <br>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nisl dolor, sagittis a euismod interdum, semper in sapien. Ut egestas mi aliquet, pellentesque erat id, placerat felis. Donec aliquet velit vitae euismod congue. Mauris non lectus id neque imperdiet sagittis pharetra gravida erat. Nunc feugiat ipsum nec sem volutpat varius. Aenean gravida tempor tellus pulvinar varius. Curabitur a pulvinar dolor, et eleifend eros. Morbi tincidunt diam ligula, id pulvinar elit commodo ut. Integer posuere molestie augue, non viverra eros iaculis nec. Nullam eu lobortis elit. In iaculis lacus ac quam mattis, eget imperdiet tortor venenatis.
+            <br>
+            <br>
+            Vestibulum id congue arcu. Pellentesque eu ipsum et ante commodo scelerisque ut vitae dolor. Aenean varius arcu sit amet imperdiet fringilla. Quisque tempus metus non pretium luctus. Nullam sagittis posuere risus at placerat. Duis feugiat porta risus, eu varius magna rutrum non. Suspendisse vel justo et turpis varius porttitor sit amet id sem. Aliquam erat volutpat. Donec consequat tempus ipsum at sollicitudin. Integer in ligula vitae eros vestibulum efficitur. Sed placerat sem in quam scelerisque aliquet.
+          </p>
+        </div>
+      </div>
     </div>
     <!-- ?Experience? -->
-
     <!-- ?Clients? -->
-
     <!-- ?Testimonials? -->
-
     <!-- Team -->
     <div class="container" id="team">
-      <div class="row">
-        <h1 class="display-4">Team</h1>
-      </div>
-      <div class="row justify-content-center">
-        <div class="card-deck">
-          <div class="card mb-3" id="team-card">
-            <img class="card-img-top rounded-circle" src="assets/team/jb.svg" alt="James Bennett">
-            <div class="card-body">
-              <h5 class="card-title">James Bennett</h5>
-              <p class="card-text">With no experience in the market, James is completely winging this.</p>
-            </div>
-          </div>
-          <div class="card mb-3" id="team-card">
-            <img class="card-img-top rounded-circle" src="assets/team/butters.svg" alt="James Bennett">
-            <div class="card-body">
-              <h5 class="card-title">Butters Stotch</h5>
-              <p class="card-text">The voice for his generation.</p>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Team</h1>
+          <br>
+          <div class="row justify-content-center">
+            <div class="card-deck">
+              <div class="card mb-3" id="team-card">
+                <img class="card-img-top rounded-circle" src="assets/team/jb.svg" alt="James Bennett">
+                <div class="card-body">
+                  <h5 class="card-title">James Bennett</h5>
+                  <p class="card-text">With no experience in the market, James is completely winging this.</p>
+                </div>
+              </div>
+              <div class="card mb-3" id="team-card">
+                <img class="card-img-top rounded-circle" src="assets/team/butters.svg" alt="James Bennett">
+                <div class="card-body">
+                  <h5 class="card-title">Butters Stotch</h5>
+                  <p class="card-text">The voice for his generation.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <!-- ?Social? -->
-
     <!-- ?Blog/Crypto News? -->
-
     <!-- Contact Us -->
     <div class="container-fluid" id="contact-us">
       <div class="container-fluid">
