added smoothe scroll

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark justify-content-between">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#hero-landing">
           <img src="assets/brand/csc.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
           Crypto Space Consultancy
         </a>
@@ -68,7 +68,7 @@
       </div>
     </div>
     <!-- About/Aproach -->
-    <div class="container" id="about-us">
+    <div class="container-fluid" id="about-us">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">About Us</h1>
@@ -83,7 +83,7 @@
       </div>
     </div>
     <!-- Services -->
-    <div class="container" id="services">
+    <div class="container-fluid" id="services">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Services</h1>
@@ -101,7 +101,7 @@
     <!-- ?Clients? -->
     <!-- ?Testimonials? -->
     <!-- Team -->
-    <div class="container" id="team">
+    <div class="container-fluid" id="team">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Team</h1>
@@ -180,7 +180,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS, then custom (js/main.js) -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
